# iRadio

./: README.md  gpiod.c  gui.cxx  install.sh  install_Drehencoder.sh  install_I2CDisplay20x4.sh  install_I2C_OLED.sh  install_ILIxxxx_TFT_par.sh  install_ST7735_TFT.sh  install_ServoD.sh  install_Tastensteuerung.sh  install_eInk.sh  install_gestenerkennung.sh  rc.local  rotary.c  setup_i2c.sh  vlcd  wpa_supplicant.conf
Gesture/PAJ7620U2/: Makefile  PAJ7620U2.c  PAJ7620U2.h
Transmitter/AdalmPluto/: install.sh
Transmitter/MMR70/: FM.txt  Installation.txt  vlcd
Transmitter/ODR/: vlcd
Transmitter/ODR/ODR-AudioEnc/: .gitignore  .travis.yml  ChangeLog  Doxyfile  Makefile.am  README.md  TODO.md  configure.ac  example_stats_receiver.py  libtoolame-dab.sym
Transmitter/ODR/ODR-AudioEnc/fdk-aac/: Makefile.am  README.md
Transmitter/ODR/ODR-AudioEnc/fdk-aac/libAACenc/include/: aacenc_lib.h
Transmitter/ODR/ODR-AudioEnc/fdk-aac/libAACenc/src/: aacenc.cpp  aacenc_lib.cpp  aacenc_tns.cpp  bitenc.cpp  dyn_bits.cpp  psy_configuration.cpp  psy_const.h  qc_main.cpp
Transmitter/ODR/ODR-AudioEnc/fdk-aac/libFDK/src/: FDK_crc.cpp  FDK_tools_rom.cpp  mdct.cpp
Transmitter/ODR/ODR-AudioEnc/fdk-aac/libMpegTPEnc/src/: tpenc_lib.cpp
Transmitter/ODR/ODR-AudioEnc/fdk-aac/libSBRenc/src/: env_est.cpp  sbr_encoder.cpp
Transmitter/ODR/ODR-AudioEnc/fdk-aac/libSYS/include/: FDK_audio.h
Transmitter/ODR/ODR-AudioEnc/libtoolame-dab/: HISTORY  README.md  absthr.h  ath.c  ath.h  availbits.c  availbits.h  bitstream.c  bitstream.h  common.c  common.h  crc.c  crc.h  encode.c  encode.h  encode_new.c  encode_new.h  encoder.h  enwindow.h  fft.c  fft.h  freqtable.h  ieeefloat.c  ieeefloat.h  mem.c  mem.h  musicin.h  options.h  pds_subband.c  portableio.c  portableio.h  psycho_0.c  psycho_0.h  psycho_1.c  psycho_1.h  psycho_1_priv.h  psycho_2.c  psycho_2.h  psycho_3.c  psycho_3.h  (+13 more)
Transmitter/ODR/ODR-AudioEnc/libtoolame-dab/html/: changes.html  default.html  psycho.html  readme.html  vbr.html
Transmitter/ODR/ODR-AudioEnc/libtoolame-dab/text/: common.text  commonh.text  encode.text  encoderh.text  musicin.text  psy.text  tonal.text
Transmitter/ODR/ODR-AudioEnc/src/: AACDecoder.cpp  AACDecoder.h  AlsaInput.cpp  AlsaInput.h  FileInput.cpp  FileInput.h  GSTInput.cpp  GSTInput.h  InputInterface.h  JackInput.cpp  JackInput.h  Outputs.cpp  Outputs.h  PadInterface.cpp  PadInterface.h  SampleQueue.h  StatsPublish.cpp  StatsPublish.h  VLCInput.cpp  VLCInput.h  aac-enc.c  common.h  encryption.c  encryption.h  odr-audioenc.cpp  utils.cpp  utils.h  wavfile.cpp  wavfile.h
Transmitter/ODR/ODR-DabMod/: INSTALL.md  Modulatorbefehl.txt
Transmitter/ODR/fdk-aac-dabplus/: Makefile.am  README.md
Transmitter/ODR/fdk-aac-dabplus/libAACenc/src/: aacenc_lib.cpp  aacenc_tns.cpp  psy_const.h
Transmitter/ODR/fdk-aac-dabplus/libFDK/src/: FDK_tools_rom.cpp
Transmitter/ODR/fdk-aac-dabplus/libSBRenc/src/: sbr_encoder.cpp
Transmitter/PiFmAdv/: FM.txt  Installation.txt  install.sh
Transmitter/PiFmAdv/src/: vlcd
Transmitter/fl2k_sdr/fl2k-transmitterexamples/DAB/: fl2k_transmit_dab.grc  rpi_transmit_dab.grc
Tuner/DABplus/: README.txt  build.sh  dab2lists.sh  dab2m3u.sh  dabd.cpp  dabscan.sh  dabscanstatus.sh  install_dabservices.sh
Tuner/DABplus/welle.io/src/welle-cli/: tests.h
Tuner/RDA5807/: build_rda5807_st7735demo.sh  build_rda5807_support_only.sh  rda5807.c
Tuner/RDA5807/st7735_demo_displayd/: README.txt
Tuner/RDA5807/st7735_demo_displayd/displayd/: README.txt  build.sh  disconnect  displayd.c
Tuner/RDA5807/st7735_demo_displayd/gpiod/: build.sh  rotary.c
Tuner/RDA5807/st7735_demo_displayd/src/: glcdfont.cpp  tft_field.cpp  tft_manager.cpp  tft_st7735.cpp  tft_st7735.h
Tuner/rtlsdr/: build_gui.sh  gui.cxx  install.sh  rtl_udpd.sh  udpclient
Tuner/rtlsdr/src/: .rtl_fm.c.swp  rtl_fm.c
autoStation/: autoStation.cxx  build.sh
bcm2835-1.57/: Makefile  config.status
bcm2835-1.57/doc/: Makefile
bcm2835-1.57/src/: Makefile  test
bcm2835-1.57/src/.deps/: test.Po
bt-speaker/: README.md  bt_speaker.service  install.sh
bt-speaker/hooks.default/: connect  disconnect
display/: dummy.c
display/ILIxxxx_parallel/: build.sh  displayd.c
display/eink/wiringpi/: Makefile
display/eink/wiringpi/Fonts/: font12CN.c  font24CN.c
display/lcd/: Makefile  displayd.cpp  lcdpcf8574.cpp  lcdpcf8574.h
display/oled/: displayd.c  make_displayd
display/servo/: build.sh  servo.c
display/st7735/: Makefile  readme.md  wiring.txt
display/st7735/displayd/: build.sh  displayd.c
display/st7735/example/: main.cpp  main2.cpp  main3.cpp  make_tft.sh  make_tft2.sh  make_tft3.sh
display/st7735/src/: tft_field.h  tft_manager.h
display/x11/DABgui/: README.txt  build.sh  displayd.cxx  gpiod.c
display/x11/LorenzC2_V2/: README.txt  build.sh  connect  sdlskale.cxx  stby_gpiod.c  stby_rotary.c  weckerd.cxx
display/x11/cassettensim/: README.txt  build.sh  connect  sdlskale.cxx
display/x11/metz_baby/: sdlskale.cxx
display/x11/skale1/: sdlskale.cxx
display/x11/skale2/: sdlskale.cxx
display/x11/skale3/: build.sh  sdlskale.cxx
magicEye/genericEM34/: build.sh  signal.cxx  tube.cxx
magicEye/genericEM84/: build.sh  tube.cxx
mediaplayerd/: build.sh  chkmount.sh  mediaplayerd.cpp  mkplaylist.sh  mpvlcd
noise_generator/: build.sh  install.txt  noised.cxx
speakingd/: README.txt  displayd.cpp  install.sh  install_Speaking_Displayd.sh  install_Speaking_Rotary.sh  rotary.c  speakingd.sh  whatlanguage.cpp
